--- a/Dockerfile.goreleaser
+++ b/Dockerfile.goreleaser
@@ -20,6 +20,42 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-FROM scratch
-ENTRYPOINT ["/configen"]
-COPY configen /
+FROM buildpack-deps:stable-scm
+
+RUN groupadd --gid 1000 configen \
+    && useradd --uid 1000 --gid configen --shell /bin/bash --create-home configen \
+    && mkdir /configen && chown configen:configen /configen
+
+WORKDIR /configen
+
+RUN apt-get -y update && apt-get -y --no-install-recommends install make sudo jq \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY configen /usr/local/bin/
+COPY docker-entrypoint.sh /usr/local/bin/
+
+ENTRYPOINT ["docker-entrypoint.sh"]
+
+# versions
+
+ARG YQ_VERSION="4.6.3"
+ARG YQ_URL="https://github.com/mikefarah/yq/releases/download/v${YQ_VERSION}/yq_linux_amd64"
+
+ARG KICKSTART_VERSION="0.2.1"
+ARG KICKSTART_URL="https://github.com/Keats/kickstart/releases/download/v${KICKSTART_VERSION}/kickstart-v${KICKSTART_VERSION}-x86_64-unknown-linux-gnu.tar.gz"
+
+ARG SUBREPO_URL="https://github.com/ingydotnet/git-subrepo"
+
+# task
+RUN sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
+
+# yq
+RUN curl -sL ${YQ_URL} -o /usr/local/bin/yq && chmod 755 /usr/local/bin/yq
+
+# kickstart
+RUN curl -sL "${KICKSTART_URL}" | tar -C /usr/local/bin -xzf - kickstart 
+
+# git-subrepo
+RUN cd ; git clone "${SUBREPO_URL}" subrepo && cd subrepo && make install && cd .. && rm -rf subrepo
+
+USER configen
